--- a/roles/nephelaiio.elasticsearch/defaults/main.yml
+++ b/roles/nephelaiio.elasticsearch/defaults/main.yml
@@ -12,11 +12,11 @@ elasticsearch_config_files:
   - "{{ elasticsearch_security_script }}"
 elasticsearch_security_script: /etc/elasticsearch/security.sh
 elasticsearch_data_path: /var/lib/elasticsearch
-elasticsearch_ca_cert: /etc/ipa/ca.crt
-elasticsearch_node_cert: "/etc/pki/certs/{{ ansible_fqdn }}.crt"
-elasticsearch_node_key: "/etc/pki/private/{{ ansible_fqdn }}.key"
-elasticsearch_admin_cert: "/etc/pki/certs/{{ ansible_fqdn }}.crt"
-elasticsearch_admin_key: "/etc/pki/private/{{ ansible_fqdn }}.key"
+elasticsearch_ca_certfile: /etc/ipa/ca.crt
+elasticsearch_node_certfile: "/etc/pki/certs/{{ ansible_fqdn }}.crt"
+elasticsearch_node_keyfile: "/etc/pki/private/{{ ansible_fqdn }}.key"
+elasticsearch_admin_certfile: "/etc/pki/certs/{{ elasticsearch_admin_user }}.crt"
+elasticsearch_admin_keyfile: "/etc/pki/private/{{ elasticsearch_admin_user }}.key"
 #elasticsearch_admin_dn
 # taken from /usr/local/bin/docker-entrypoint.sh inside docker image
 elasticsearch_user_id: 1000
